--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,6 +30,9 @@
 	<uses-permission
 		android:name='android.permission.ACCESS_LOCATION_EXTRA_COMMANDS'
 	></uses-permission>
+	<uses-permission
+		android:name="android.permission.READ_PHONE_STATE"
+	></uses-permission>
 
 	<application
 		android:icon="@drawable/icon"
@@ -38,6 +41,7 @@
 		<activity
 			android:name=".FusionInventory"
 			android:label="@string/app_name"
+			android:launchMode="singleInstance"
 		>
 			<intent-filter>
 				<action
@@ -48,11 +52,12 @@
 		</activity>
 		<service
 			android:enabled="true"
-			android:name="Agent"
 			android:label="FusionInventory Agent"
 			android:description="@string/agent_description"
 			android:icon="@drawable/fusioninventory"
-			android:process=":agent">
+			android:process=":agent"
+			android:name="Agent"
+		>
 			<intent-filter>
 				<action
 					android:name="org.fusioninventory.Agent" />
@@ -68,6 +73,11 @@
 					android:name="android.intent.category.HOME" />
 			</intent-filter>
 		</receiver>
+		<activity
+			android:name="Settings"
+			android:label="FusionInventory Agent Settings"
+			android:launchMode="singleInstance"
+		></activity>
 	</application>
 
 
