--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,7 +36,10 @@
 
 	<uses-permission
 		android:name="android.permission.GET_PACKAGE_SIZE" />
-
+	<uses-permission
+		android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
+	<uses-permission
+		android:name="android.permission.CHANGE_WIFI_STATE" />
 	<application
 		android:icon="@drawable/icon"
 		android:label="@string/app_name"
