--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -47,9 +47,7 @@
 	>
 		<activity
 			android:name=".FusionInventory"
-			android:label="@string/app_name"
-			android:launchMode="singleInstance"
-		>
+			android:label="@string/app_name" android:launchMode="standard">
 			<intent-filter>
 				<action
 					android:name="android.intent.action.MAIN" />
