--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -41,10 +41,8 @@
 	<uses-permission
 		android:name="android.permission.CHANGE_WIFI_STATE" />
 	<application
-		android:icon="@drawable/icon"
 		android:label="@string/app_name"
-		android:name="FusionInventoryApp"
-	>
+		android:name="FusionInventoryApp" android:icon="@drawable/fusioninventory">
 		<activity
 			android:name=".FusionInventory"
 			android:label="@string/app_name" android:launchMode="standard">
