--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,7 +43,7 @@
 		android:name="android.permission.CHANGE_WIFI_STATE" />
 	<application
 		android:label="@string/app_name"
-		android:name="FusionInventoryApp" android:icon="@drawable/fusioninventory" android:debuggable="false">
+		android:name="FusionInventoryApp" android:icon="@drawable/fusioninventory" android:debuggable="true" android:vmSafeMode="true">
 		<activity
 			android:name=".FusionInventory"
 			android:label="@string/app_name" android:launchMode="standard">
