--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,8 +5,7 @@
 	android:versionCode="1"
 	android:versionName="1.0"
 >
-	<uses-sdk
-		android:minSdkVersion="8" />
+	<uses-sdk android:minSdkVersion="3" android:targetSdkVersion="3"/>
 
 	<!-- Permissions -->
 	<uses-permission
@@ -80,9 +79,8 @@
 		</receiver>
 		<activity
 			android:name="Settings"
-			android:label="FusionInventory Agent Settings"
 			android:launchMode="singleInstance"
-		></activity>
+		android:label="@string/agent_settings"></activity>
 	</application>
 
 
