--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,9 +2,7 @@
 <manifest
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	package="org.fusioninventory"
-	android:versionCode="1"
-	android:versionName="1.0"
->
+	android:versionCode="1" android:versionName="1.0.1">
 	<uses-sdk android:targetSdkVersion="4" android:minSdkVersion="4"/>
 	<!-- Permissions -->
 	<uses-permission
@@ -41,7 +39,7 @@
 		android:name="android.permission.CHANGE_WIFI_STATE" />
 	<application
 		android:label="@string/app_name"
-		android:name="FusionInventoryApp" android:debuggable="true" android:vmSafeMode="true" android:icon="@drawable/icon">
+		android:name="FusionInventoryApp" android:vmSafeMode="true" android:icon="@drawable/icon" android:debuggable="false">
 		<activity
 			android:name=".Accueil"
 			android:label="@string/app_name" android:launchMode="standard">
