--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -39,7 +39,7 @@
 		android:name="android.permission.CHANGE_WIFI_STATE" />
 	<application
 		android:label="@string/app_name"
-		android:name="FusionInventoryApp" android:vmSafeMode="true" android:icon="@drawable/icon" android:debuggable="true">
+		android:name="FusionInventoryApp" android:vmSafeMode="true" android:icon="@drawable/icon" android:debuggable="false">
 		<activity
 			android:name=".Accueil"
 			android:label="@string/app_name" android:launchMode="standard">
