--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	package="org.fusioninventory"
-	android:versionCode="1" android:versionName="1.0.1">
-	<uses-sdk android:targetSdkVersion="4" android:minSdkVersion="4"/>
+	android:versionCode="1" android:versionName="1.1">
+	<uses-sdk android:minSdkVersion="4"/>
 	<!-- Permissions -->
 	<uses-permission
 		android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
@@ -27,8 +27,6 @@
 		android:name="android.permission.CAMERA" />
 	<uses-permission
 		android:name="android.permission.BLUETOOTH" />
-	<uses-permission
-		android:name="android.permission.INSTALL_PACKAGES" />
    <uses-permission
       android:name="android.permission.READ_PHONE_STATE"/>
 	<uses-permission
@@ -39,7 +37,7 @@
 		android:name="android.permission.CHANGE_WIFI_STATE" />
 	<application
 		android:label="@string/app_name"
-		android:name="FusionInventoryApp" android:vmSafeMode="true" android:icon="@drawable/icon" android:debuggable="false">
+		android:name="FusionInventoryApp" android:vmSafeMode="true" android:icon="@drawable/icon">
 		<activity
 			android:name=".Accueil"
 			android:label="@string/app_name" android:launchMode="standard">
