--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
 	package="org.fusioninventory"
-	android:versionCode="1" android:versionName="1.1">
+	android:versionCode="1" android:versionName="1.2">
 	<uses-sdk android:minSdkVersion="4"/>
 	<!-- Permissions -->
 	<uses-permission
@@ -37,7 +38,9 @@
 		android:name="android.permission.CHANGE_WIFI_STATE" />
 	<application
 		android:label="@string/app_name"
-		android:name="FusionInventoryApp" android:vmSafeMode="true" android:icon="@drawable/icon">
+		android:name="FusionInventoryApp"
+		android:vmSafeMode="true"
+		android:icon="@drawable/icon">
 		<activity
 			android:name=".Accueil"
 			android:label="@string/app_name" android:launchMode="standard">
@@ -55,7 +58,7 @@
 			android:icon="@drawable/icon"
 
 			android:name="Agent"
-		>
+			tools:ignore="ExportedService">
 			<!-- android:process=":agent" -->
 			<intent-filter>
 				<action
@@ -68,7 +71,7 @@
             android:description="@string/agent_description"
             android:icon="@drawable/icon"
             android:name=".AutoInventory"
-        >
+			tools:ignore="ExportedService">
             <!-- android:process=":Auto agent" -->
             <intent-filter>
                 <action
