--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	package="org.fusioninventory"
-	android:versionCode="1" android:versionName="1.2">
+	android:versionCode="1"
+	android:versionName="1.2">
 	<uses-sdk android:minSdkVersion="12"/>
 	<!-- Permissions -->
 	<uses-permission
