--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
-	package="org.fusioninventory"
+	package="org.flyve.inventory.agent"
 	android:versionCode="1"
 	android:versionName="1.2">
 	<uses-sdk android:minSdkVersion="12"/>
@@ -37,11 +37,11 @@
 		android:name="android.permission.CHANGE_WIFI_STATE" />
 	<application
 		android:label="@string/app_name"
-		android:name="FusionInventoryApp"
+		android:name="org.flyve.inventory.agent.FusionInventoryApp"
 		android:vmSafeMode="true"
 		android:icon="@drawable/icon">
 		<activity
-			android:name=".Accueil"
+			android:name="org.flyve.inventory.agent.Accueil"
 			android:label="@string/app_name" android:launchMode="standard">
 			<intent-filter>
 				<action
@@ -56,7 +56,7 @@
 			android:description="@string/agent_description"
 			android:icon="@drawable/icon"
 
-			android:name="Agent"
+			android:name="org.flyve.inventory.agent.Agent"
 			tools:ignore="ExportedService">
 			<!-- android:process=":agent" -->
 			<intent-filter>
@@ -69,7 +69,7 @@
             android:label="Agent Auto"
             android:description="@string/agent_description"
             android:icon="@drawable/icon"
-            android:name=".AutoInventory"
+            android:name="org.flyve.inventory.agent.AutoInventory"
 			tools:ignore="ExportedService">
             <!-- android:process=":Auto agent" -->
             <intent-filter>
@@ -78,7 +78,7 @@
             </intent-filter>
         </service>
 		<receiver
-			android:name="BootStartAgent"
+			android:name="org.flyve.inventory.agent.BootStartAgent"
 		>
 			<intent-filter>
 				<action
@@ -88,7 +88,7 @@
 			</intent-filter>
 		</receiver>
 		<activity
-			android:name="Settings"
+			android:name="org.flyve.inventory.agent.Settings"
 			android:launchMode="singleInstance"
 		android:label="@string/agent_settings"></activity>
 	</application>
