--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -43,6 +43,8 @@
 		<activity
 			android:name="org.flyve.inventory.agent.Accueil"
 			android:label="@string/app_name" android:launchMode="standard">
+		</activity>
+		<activity android:name=".SplashActivity">
 			<intent-filter>
 				<action
 					android:name="android.intent.action.MAIN" />
@@ -52,7 +54,7 @@
 		</activity>
 		<service
 			android:enabled="true"
-			android:label="FusionInventory Agent"
+			android:label="Inventory Agent"
 			android:description="@string/agent_description"
 			android:icon="@drawable/icon"
 
