--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
 		android:label="@string/app_name"
 		android:name="org.flyve.inventory.agent.FusionInventoryApp"
 		android:vmSafeMode="true"
+		android:theme="@style/AppTheme"
 		android:icon="@drawable/icon">
 		<activity
 			android:name="org.flyve.inventory.agent.Accueil"
