--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.github.triplet.play'
+
 android {
     compileSdkVersion 16
     buildToolsVersion "22.0.1"
@@ -37,6 +39,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.5.0'
+        classpath 'com.android.tools.build:gradle:2.0.0'
+        classpath 'com.github.triplet.gradle:play-publisher:1.1.5'
     }
 }
