--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ android:
   - build-tools-22.0.1
   - android-16
 script:
-  - ./gradlew build
+  - gradle clean build
 after_success:
   - ci/deploy.sh
 notifications:
