--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	package="org.flyve.inventory.agent"
-	android:versionCode="1"
-	android:versionName="1.0">
-	<uses-sdk android:minSdkVersion="12"/>
+	android:versionName="1.0.2"
+	android:versionCode="10">
+
 	<!-- Permissions -->
 	<uses-permission
 		android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
@@ -93,8 +93,7 @@
 		<activity
 			android:name="org.flyve.inventory.agent.Settings"
 			android:launchMode="singleInstance"
-		android:label="@string/agent_settings"></activity>
+		android:label="@string/agent_settings">
+		</activity>
 	</application>
-
-
 </manifest>
