refactor(package): change name on description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@teclib/flyve-mdm-android-inventory-agent",
   "version": "2.0.0",
-  "description": "Flyve Inventory Agent for Android",
+  "description": "Flyve MDM Inventory Agent for Android",
   "main": "index.js",
   "scripts": {
     "release": "standard-version -t ''"
