ci(build): release **beta** for version 2.1.0-beta

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	package="org.flyve.inventory.agent"
-	android:versionName="1.0.16"
-	android:versionCode="24">
+	android:versionName="2.1.0-beta"
+	android:versionCode="85">
 
 	<!-- Permissions -->
 	<uses-permission
