--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,34 +7,21 @@
 	android:versionCode="85">
 
 	<!-- Permissions -->
-	<uses-permission
-		android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-	<uses-permission
-		android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<uses-permission
-		android:name="android.permission.ACCESS_MOCK_LOCATION" />
-	<uses-permission
-		android:name="android.permission.ACCESS_WIFI_STATE" />
-	<uses-permission
-		android:name='android.permission.ACCESS_COARSE_LOCATION' />
-	<uses-permission
-		android:name='android.permission.ACCESS_FINE_LOCATION' />
-	<uses-permission
-		android:name='android.permission.ACCESS_LOCATION_EXTRA_COMMANDS' />
-	<uses-permission
-		android:name="android.permission.READ_PHONE_STATE" />
-	<uses-permission
-		android:name="android.permission.INTERNET" />
-	<uses-permission
-		android:name="android.permission.CAMERA" />
-	<uses-permission
-		android:name="android.permission.BLUETOOTH" />
-	<uses-permission
-		android:name="android.permission.GET_PACKAGE_SIZE" />
-	<uses-permission
-		android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
-	<uses-permission
-		android:name="android.permission.CHANGE_WIFI_STATE" />
+	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name='android.permission.ACCESS_COARSE_LOCATION' />
+	<uses-permission android:name='android.permission.ACCESS_FINE_LOCATION' />
+	<uses-permission android:name='android.permission.ACCESS_LOCATION_EXTRA_COMMANDS' />
+	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.CAMERA" />
+	<uses-permission android:name="android.permission.BLUETOOTH" />
+	<uses-permission android:name="android.permission.GET_PACKAGE_SIZE" />
+	<uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
+	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+
 	<application
 		android:label="@string/app_name"
 		android:name="org.flyve.inventory.agent.InventoryAgentApp"
@@ -55,46 +42,21 @@
 			android:name="org.flyve.inventory.agent.Accueil"
 			android:label="@string/app_name" android:launchMode="standard">
 		</activity>
-		<activity
-			android:name="org.flyve.inventory.agent.Settings"
-			android:launchMode="singleInstance"
-			android:label="@string/agent_settings">
-		</activity>
 		<service
 			android:enabled="true"
 			android:label="Inventory Agent"
 			android:description="@string/agent_description"
 			android:icon="@drawable/icon"
-
 			android:name="org.flyve.inventory.agent.Agent"
 			tools:ignore="ExportedService">
-			<!-- android:process=":agent" -->
 			<intent-filter>
-				<action
-					android:name="org.flyve.inventory.agent" />
+				<action android:name="org.flyve.inventory.service" />
 			</intent-filter>
 		</service>
-        <service
-            android:enabled="true"
-            android:label="Agent Auto"
-            android:description="@string/agent_description"
-            android:icon="@drawable/icon"
-            android:name="org.flyve.inventory.agent.AutoInventory"
-			tools:ignore="ExportedService">
-            <!-- android:process=":Auto agent" -->
-            <intent-filter>
-                <action
-                    android:name="org.flyve.inventory.agent" />
-            </intent-filter>
-        </service>
-		<receiver
-			android:name="org.flyve.inventory.agent.BootStartAgent"
-		>
+		<receiver android:name="org.flyve.inventory.agent.BootStartAgent">
 			<intent-filter>
-				<action
-					android:name="android.intent.action.BOOT_COMPLETED" />
-				<category
-					android:name="android.intent.category.HOME" />
+				<action android:name="android.intent.action.BOOT_COMPLETED" />
+				<category android:name="android.intent.category.HOME" />
 			</intent-filter>
 		</receiver>
 	</application>
