--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         applicationId "org.flyve.inventory.agent"
         minSdkVersion 12
         targetSdkVersion 12
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -42,6 +43,10 @@ repositories {
 }
 
 dependencies {
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+            exclude group: 'com.android.support', module: 'support-annotations'
+        })
+    testCompile 'junit:junit:4.12'
     compile 'com.flyvemdm:inventory:1.0.2@aar'
 }
 
