ci(circleci): add required folders for gradle

--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,6 @@ node_modules
 # Miscellaneous
 
 *.iml
-.gradle
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
@@ -75,10 +74,10 @@ build
 /ci/gplay.json
 /ci/gplay.tar.gz
 .idea/
-.gradle/
-gradle/
-gradlew
-gradlew.bat
+#.gradle/
+#gradle/
+#gradlew
+#gradlew.bat
 
 #fastlane
 /fastlane/README.md
