--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,10 @@ jobs:
   build:
     working_directory: ~/code
     docker:
+      # Android the primary container
       - image: circleci/android:api-23-alpha
+      #- image: circleci/python:3.6
+      #- image: circleci/node:7
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
@@ -17,12 +20,24 @@ jobs:
           paths:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-      - run:
-          name: Run Tests
-          command: ./gradlew lint test
-      - store_artifacts:
-          path: app/build/reports
-          destination: reports
-      - store_test_results:
-          path: app/build/test-results
-
+  test:
+    docker:
+        - image: circleci/android:api-23-alpha
+      steps:
+        - checkout
+        - run:
+            name: Run Tests
+            command: ./gradlew lint test
+        - store_artifacts:
+            path: app/build/reports
+            destination: reports
+        - store_test_results:
+            path: app/build/test-results
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - test:
+          requires:
+            - build
