--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,18 +21,21 @@ jobs:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
   flyve_test:
+    working_directory: ~/code
     docker:
         - image: circleci/android:api-23-alpha
-      steps:
-        - checkout
-        - run:
-            name: Run Tests
-            command: ./gradlew lint test
-        - store_artifacts:
-            path: app/build/reports
-            destination: reports
-        - store_test_results:
-            path: app/build/test-results
+    environment:
+      JVM_OPTS: -Xmx3200m
+    steps:
+      - checkout
+      - run:
+          name: Run Tests
+          command: ./gradlew lint test
+      - store_artifacts:
+          path: app/build/reports
+          destination: reports
+      - store_test_results:
+          path: app/build/test-results
 workflows:
   version: 2
   build_and_test:
