--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,30 @@
 version: 2
 jobs:
+  flyve_config:
+    working_directory: ~/code
+    docker:
+      - image: circleci/python:3.6
+      - image: circleci/node:7
+      - image: circleci/android:api-23-alpha
+      - run:
+          name: Update version and code number
+          command: |
+              # increment version code, need to be unique to send to store
+              ./gradlew updateVersionCode -P vCode=$CIRCLE_BUILD_NUM
+
+              # increment version on package.json, create tag and commit with changelog
+              npm run release -- -m "ci(release): generate **CHANGELOG.md** for version %s"
+
+              # Get version number from package.json
+              export GIT_TAG=$(jq -r ".version" package.json)
+
+              # update version name generate on package json
+              ./gradlew updateVersionName -P vName=$GIT_TAG
   flyve_build:
     working_directory: ~/code
     docker:
       # Android the primary container
       - image: circleci/android:api-23-alpha
-      #- image: circleci/python:3.6
-      #- image: circleci/node:7
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
@@ -42,5 +60,8 @@ workflows:
     jobs:
       - flyve_build
       - flyve_test:
+          requires:
+            - flyve_build
+      - flyve_instrumented_test:
           requires:
             - flyve_build
