--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,20 +6,22 @@ jobs:
       - image: circleci/python:3.6
       - image: circleci/node:7
       - image: circleci/android:api-23-alpha
-      - run:
-          name: Update version and code number
-          command: |
-              # increment version code, need to be unique to send to store
-              ./gradlew updateVersionCode -P vCode=$CIRCLE_BUILD_NUM
+      steps:
+        - checkout
+        - run:
+            name: Update version and code number
+            command: |
+                # increment version code, need to be unique to send to store
+                ./gradlew updateVersionCode -P vCode=$CIRCLE_BUILD_NUM
 
-              # increment version on package.json, create tag and commit with changelog
-              npm run release -- -m "ci(release): generate **CHANGELOG.md** for version %s"
+                # increment version on package.json, create tag and commit with changelog
+                npm run release -- -m "ci(release): generate **CHANGELOG.md** for version %s"
 
-              # Get version number from package.json
-              export GIT_TAG=$(jq -r ".version" package.json)
+                # Get version number from package.json
+                export GIT_TAG=$(jq -r ".version" package.json)
 
-              # update version name generate on package json
-              ./gradlew updateVersionName -P vName=$GIT_TAG
+                # update version name generate on package json
+                ./gradlew updateVersionName -P vName=$GIT_TAG
   flyve_build:
     working_directory: ~/code
     docker:
