--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,6 @@ workflows:
       - flyve_test:
           requires:
             - flyve_build
-      - flyve_instrumented_test:
+      - flyve_deploy:
           requires:
-            - flyve_build
-
+            - flyve_test
