--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
       # Android the primary container
       - image: circleci/android:api-23-alpha
       - image: circleci/python:3.6.2
-      - image: circleci/node:7sdasdf
+      - image: circleci/node:7
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
