--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,8 +39,8 @@ jobs:
     docker:
       # Android the primary container
       - image: circleci/android:api-23-alpha
+      - image: circleci/ruby:2.4.1-node
       - image: circleci/python:3.6.2
-      - image: circleci/node:7
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
