--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,9 @@ jobs:
       - checkout
       - restore_cache:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - emulator -avd circleci-android22 -no-audio -no-window:
+          background: true
+          parallel: true
       - run:
           name: Setup environment
           command: source ci/scripts/ci_setup.sh
