ci(circleci): add launch emulator

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,12 +45,16 @@ jobs:
       - checkout
       - restore_cache:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-      - emulator -avd circleci-android22 -no-audio -no-window:
-          background: true
-          parallel: true
       - run:
           name: Setup environment
           command: source ci/scripts/ci_setup.sh
+      - run:
+          name: Setup emulator
+          command: sdkmanager "system-images;android-22;default;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-22;default;armeabi-v7a"
+      - run:
+          name: Launch emulator
+          command: export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator64-arm -avd test -noaudio -no-boot-anim -no-window -accel on
+          background: true
 #      - run:
 #          name: Update version and code
 #          command: source ci/scripts/ci_updateversion.sh
