ci(circleci): refactor google play for fastlane script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,7 @@ jobs:
 #          command: ./gradlew assemble
 #      - run:
 #          name: Deploy to Google Play
-#          command: source ci/scripts/ci_google_play.sh "beta"
+#          command: source ci/scripts/ci_fastlane.sh "beta"
 #      - run:
 #          name: Changelog
 #          command: source ci/scripts/ci_changelog.sh
