--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,18 +66,18 @@ jobs:
 #      - run:
 #          name: Update version and code
 #          command: source ci/scripts/ci_updateversion.sh
-      - run:
-          name: Transifex
-          command: source ci/scripts/ci_transifex.sh
 #      - run:
-#          name: Create apk
-#          command: ./gradlew assemble
+#          name: Transifex
+#          command: source ci/scripts/ci_transifex.sh
+      - run:
+          name: Create apk
+          command: ./gradlew assemble
 #      - run:
 #          name: Deploy to Google Play
 #          command: source ci/scripts/ci_fastlane.sh "beta"
-#      - run:
-#          name: Create a github release
-#          command: source ci/scripts/ci_github_release.sh
+      - run:
+          name: Create a github release
+          command: source ci/scripts/ci_github_release.sh
 #      - run:
 #          name: Changelog
 #          command: source ci/scripts/ci_changelog.sh
