--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           paths:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-  flyve_test:
+  flyve_test_22:
     working_directory: ~/flyve
     docker:
         - image: circleci/android:api-26-alpha
@@ -27,13 +27,59 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Setup emulator
+          command: sdkmanager "system-images;android-22;default;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-22;default;armeabi-v7a"
+      - run:
+          name: Launch emulator
+          command: export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator64-arm -avd test -noaudio -no-boot-anim -no-window -accel on
+          background: true
+      - run:
+          name: Wait emulator
+          command: |
+            # wait for it to have booted
+            circle-android wait-for-boot
+            # unlock the emulator screen
+            sleep 30
+            adb shell input keyevent 82
+      - run:
           name: Run Tests
-          command: ./gradlew lint test
+          command: ./gradlew connectedAndroidTest
       - store_artifacts:
           path: app/build/reports
           destination: reports
       - store_test_results:
           path: app/build/test-results
+  flyve_test_16:
+      working_directory: ~/flyve
+      docker:
+          - image: circleci/android:api-26-alpha
+      environment:
+        JVM_OPTS: -Xmx3200m
+      steps:
+        - checkout
+        - run:
+            name: Setup emulator
+            command: sdkmanager "system-images;android-16;default;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-16;default;armeabi-v7a"
+        - run:
+            name: Launch emulator
+            command: export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator64-arm -avd test -noaudio -no-boot-anim -no-window -accel on
+            background: true
+        - run:
+            name: Wait emulator
+            command: |
+              # wait for it to have booted
+              circle-android wait-for-boot
+              # unlock the emulator screen
+              sleep 30
+              adb shell input keyevent 82
+        - run:
+            name: Run Tests
+            command: ./gradlew connectedAndroidTest
+        - store_artifacts:
+            path: app/build/reports
+            destination: reports
+        - store_test_results:
+            path: app/build/test-results
   flyve_deploy:
     working_directory: ~/flyve
     docker:
@@ -48,45 +94,51 @@ jobs:
       - run:
           name: Setup environment
           command: source ci/scripts/ci_setup.sh
-#      - run:
-#          name: Setup emulator
-#          command: sdkmanager "system-images;android-22;default;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-22;default;armeabi-v7a"
-#      - run:
-#          name: Launch emulator
-#          command: export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator64-arm -avd test -noaudio -no-boot-anim -no-window -accel on
-#          background: true
-#      - run:
-#          name: Wait emulator
-#          command: |
-#            # wait for it to have booted
-#            circle-android wait-for-boot
-#            # unlock the emulator screen
-#            sleep 30
-#            adb shell input keyevent 82
-#      - run:
-#          name: Update version and code
-#          command: source ci/scripts/ci_updateversion.sh
-#      - run:
-#          name: Transifex
-#          command: source ci/scripts/ci_transifex.sh
+      - run:
+          name: Update version and code
+          command: source ci/scripts/ci_updateversion.sh
+      - run:
+          name: Transifex
+          command: source ci/scripts/ci_transifex.sh
       - run:
           name: Create apk
           command: ./gradlew assemble
-#      - run:
-#          name: Deploy to Google Play
-#          command: source ci/scripts/ci_fastlane.sh "beta"
+      - run:
+          name: Deploy to Google Play
+          command: source ci/scripts/ci_fastlane.sh "beta"
       - run:
           name: Create a github release
           command: source ci/scripts/ci_github_release.sh
-#      - run:
-#          name: Changelog
-#          command: source ci/scripts/ci_changelog.sh
-#      - run:
-#          name: Javadoc
-#          command: source ci/scripts/ci_javadoc.sh
-#      - run:
-#          name: Coverage
-#          command: source ci/scripts/ci_coverage.sh
+      - save_cache:
+          paths:
+            - ~/.gradle
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+flyve_documentation:
+    working_directory: ~/flyve
+    docker:
+      # Android the primary container
+      - image: circleci/android:api-26-alpha
+    environment:
+      JVM_OPTS: -Xmx3200m
+    steps:
+      - checkout
+      - restore_cache:
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
+          name: Setup environment
+          command: source ci/scripts/ci_setup.sh
+      - run:
+          name: Create apk
+          command: ./gradlew assemble
+      - run:
+          name: Changelog
+          command: source ci/scripts/ci_changelog.sh
+      - run:
+          name: Javadoc
+          command: source ci/scripts/ci_javadoc.sh
+      - run:
+          name: Coverage
+          command: source ci/scripts/ci_coverage.sh
       - save_cache:
           paths:
             - ~/.gradle
@@ -96,11 +148,18 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - flyve_deploy
-#      - flyve_build
-#      - flyve_test:
-#          requires:
-#            - flyve_build
-#      - flyve_deploy:
-#          requires:
-#            - flyve_test
+      - flyve_build
+      - flyve_test_16:
+          requires:
+            - flyve_build
+      - flyve_test_22:
+          requires:
+            - flyve_build
+      - flyve_deploy:
+          requires:
+            - flyve_test_16
+            - flyve_test_22
+      - flyve_documentation:
+          requires:
+            - flyve_test_16
+            - flyve_test_22
