--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           paths:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-  flyve_test_23:
+  flyve_test_25:
     working_directory: ~/flyve
     docker:
         - image: circleci/android:api-26-alpha
@@ -28,7 +28,7 @@ jobs:
       - checkout
       - run:
           name: Setup emulator
-          command: sdkmanager "system-images;android-23;default;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-23;default;armeabi-v7a"
+          command: sdkmanager "system-images;android-25;google_apis;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-25;google_apis;armeabi-v7a"
       - run:
           name: Launch emulator
           command: export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator64-arm -avd test -noaudio -no-boot-anim -no-window -accel on
@@ -149,14 +149,14 @@ workflows:
       - flyve_test_16:
           requires:
             - flyve_build
-      - flyve_test_23:
+      - flyve_test_25:
           requires:
             - flyve_build
       - flyve_deploy:
           requires:
             - flyve_test_16
-            - flyve_test_23
+            - flyve_test_25
       - flyve_documentation:
           requires:
             - flyve_test_16
-            - flyve_test_23
+            - flyve_test_25
